--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 		<div class="container">
 			<div class="row g-0">
 				<div class="col-lg-3">
-					<h2 class="heading">We create architectural designs</h2>
+					<h2 class="heading">Hello again Mr. Tony!</h2>
 					<p>Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium, quam odio ipsum veritatis est maiores velit quasi blanditiis et natus accusamus itaque. Veniam quidem debitis odio amet voluptas distinctio dicta placeat! Et pariatur doloremque ea veniam.</p>
 
 					<p><a href="#" class="more-2">Learn more <span class="icon-arrow_forward"></span></a></p>
